added comment on apache config, fixed bug of usernames, improved description in ADMIN.txt

--- a/boca-1.5.2/doc/changelog.txt
+++ b/boca-1.5.2/doc/changelog.txt
@@ -1,3 +1,9 @@
+version 1.5.2:
+(THIS VERSION IS IN DEVEL AND CAN BE CHANGED AT ANY TIME)
+- improve description of inbetween warmup and contest in ADMIN.txt
+- fix a bug that could allow an user to change their username
+- creation of an APACHE.txt doc about setting up apache configuration
+
 version 1.5.1:
 2012/10/20:
 - (ICPC Linux) fixed logging in issue after cleandisk.sh
