--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,3 +1,7 @@
+version 1.5.4:
+- bug fix to allow for multiple input/output files
+- installv2 updated to try both sysvutils and sysvinit-utils
+
 version 1.5.3:
 - bug fixes
 - inclusion of automatic download of external scores from the first line of otherservers
