--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+boca (1:1.5.13) xenial; urgency=medium
+
+  * Bump to new version
+
+ -- Bruno Ribas <brunoribas@utfpr.edu.br>  Mon, 30 Oct 2017 18:40:00 -0200
+
 boca (1:1.5.12) xenial; urgency=medium
 
   * Bug Fixes
