--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,28 @@
+boca (1:1.5.13-5) xenial; urgency=high
+
+  * Bug Fixes
+  * User Transfer OK
+
+ -- Bruno Ribas <brunoribas@utfpr.edu.br>  Mon, 06 Nov 2017 14:14:24 -0200
+
+boca (1:1.5.13-4) xenial; urgency=high
+
+  * Bug Fixes for Global Clarifications
+
+ -- Bruno Ribas <brunoribas@utfpr.edu.br>  Mon, 06 Nov 2017 12:02:37 -0200
+
+boca (1:1.5.13-3) xenial; urgency=high
+
+  * Bug Fixes
+
+ -- Bruno Ribas <brunoribas@utfpr.edu.br>  Mon, 06 Nov 2017 10:30:17 -0200
+
+boca (1:1.5.13-2) xenial; urgency=medium
+
+  * Bug Fixes
+
+ -- Bruno Ribas <brunoribas@utfpr.edu.br>  Wed, 01 Nov 2017 16:42:02 -0200
+
 boca (1:1.5.13-1) xenial; urgency=medium
 
   * Soft delete of users
