--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+boca (1.5.14-3) bionic; urgency=medium
+
+  * Bug Fixes
+
+ -- Bruno Cesar Ribas <brunoribas@gmail.com>  Wed, 29 Aug 2018 11:11:26 -0300
+
 boca (1.5.14-2) bionic; urgency=medium
 
   * New upstream release
