--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+boca (1.5.14-5) bionic; urgency=medium
+
+  * Bug Fixes
+
+ -- Bruno Cesar Ribas <brunoribas@gmail.com>  Wed, 29 Aug 2018 13:06:20 -0300
+
 boca (1.5.14-4) bionic; urgency=medium
 
   * Log Bug Fixes
