--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+boca (1.5.14-7) bionic; urgency=medium
+
+  * Bug fixes
+
+ -- Bruno Cesar Ribas <brunoribas@gmail.com>  Thu, 18 Oct 2018 23:25:20 -0300
+
+boca (1.5.14-6) bionic; urgency=medium
+
+  * Update boca-createjail jails packages
+
+ -- Bruno Cesar Ribas <brunoribas@gmail.com>  Tue, 25 Sep 2018 22:10:19 -0300
+
 boca (1.5.14-5) bionic; urgency=medium
 
   * Bug Fixes
