--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+boca (1.5.14-8ubuntu4) focal; urgency=medium
+
+  * Compatible with Ubuntu focal
+  * Merges from 2018 and 2019 modifications
+  * Merge changes from 2020
+
+ -- Bruno Cesar Ribas <bruno.ribas@unb.br>  Thu, 16 Nov 2020 15:35:22 -0300
+
 boca (1.5.14-8) bionic; urgency=medium
 
   * LATAM fixes
