--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+boca (1.5.14-8ubuntu4.2) focal; urgency=medium
+
+  * unglysalt workaround.
+
+ -- Bruno Cesar Ribas <bruno.ribas@unb.br>  Fri, 30 Jul 2021 11:18:05 -0300
+
+boca (1.5.14-8ubuntu4.1) focal; urgency=medium
+
+  * Updates from BR regional
+
+ -- Bruno Cesar Ribas <bruno.ribas@unb.br>  Fri, 18 Dec 2020 14:43:45 -0300
+
 boca (1.5.14-8ubuntu4) focal; urgency=medium
 
   * Compatible with Ubuntu focal
