--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+boca (1.5.21-1+ubuntu22.04) jammy; urgency=medium
+
+  * Rebuild for Ubuntu 22.04 Jammy
+
+ -- Davi Antônio da Silva Santos <antoniossdavi@gmail.com>  Thu, 26 Sep 2024 22:10:03 -0300
+
+boca (1.5.21-1+ubuntu24.04) noble; urgency=medium
+
+  [ Bruno Ribas ]
+  * tools/boca-createjail: use correct maratona-linux repo
+
+  [ Davi Antônio da Silva Santos ]
+  * Update internal version info to 1.5.21
+
+ -- Davi Antônio da Silva Santos <antoniossdavi@gmail.com>  Thu, 26 Sep 2024 22:04:22 -0300
+
 boca (1.5.20-1+ubuntu22.04) jammy; urgency=medium
 
   * Rebuild for Ubuntu 22.04 Jammy
