--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+boca (1.5.21-2+ubuntu24.04) noble; urgency=medium
+
+  * Update copyright file
+  * Update the standards version to 4.7.2.0
+  * Specify that the build does not require root
+
+ -- Davi Antônio da Silva Santos <antoniossdavi@gmail.com>  Mon, 28 Apr 2025 23:29:20 -0300
+
 boca (1.5.21-1+ubuntu22.04) jammy; urgency=medium
 
   * Rebuild for Ubuntu 22.04 Jammy
